--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "gulp-responsive",
   "version": "3.0.1",
-  "description": "gulp responsive images",
+  "description": "small patch for gulp-responsive",
   "main": "lib",
   "license": "MIT",
-  "repository": "mahnunchik/gulp-responsive",
+  "repository": "cjquines/gulp-responsive",
   "author": {
     "name": "Evgeny Vlasenko",
     "email": "mahnunchik+responsive@gmail.com",
@@ -46,7 +46,7 @@
     "plugin-error": "^1.0.1",
     "plur": "^3.1.1",
     "rename": "^1.0.4",
-    "sharp": "^0.23.1",
+    "sharp": "^0.28.1",
     "through2": "^3.0.1",
     "vinyl": "^2.2.0"
   },
