--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,9 +1,9 @@
 name: Verify
 on:
   push:
-    branches: [ master ]
+    branches: [ master, public-package ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, public-package ]
 
 jobs:
   verify:
