--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@localnerve/gulp-responsive",
-  "version": "5.0.2",
+  "version": "6.0.0",
   "description": "small patch for gulp-responsive",
   "type": "module",
   "exports": {
@@ -23,13 +23,12 @@
     "url" : "https://www.localnerve.com"
   }],
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "scripts": {
     "test": "npm run lint && mocha",
     "test:debug": "mocha --inspect-brk",
-    "lint": "standard",
-    "lint:fix": "standard --fix"
+    "lint": "eslint ."
   },
   "keywords": [
     "gulpplugin",
@@ -52,12 +51,12 @@
     "plugin-error": "^2.0.1",
     "plur": "^5.1.0",
     "rename": "^1.0.4",
-    "sharp": "^0.32.4",
+    "sharp": "^0.32.5",
     "vinyl": "^3.0.0"
   },
   "devDependencies": {
     "file-type": "^18.5.0",
     "mocha": "^10.2.0",
-    "standard": "^17.1.0"
+    "eslint": "^8.49.0"
   }
 }
