--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@localnerve/gulp-responsive",
-  "version": "6.1.2",
+  "version": "6.1.3",
   "description": "small patch for gulp-responsive",
   "type": "module",
   "exports": {
@@ -55,8 +55,10 @@
     "vinyl": "^3.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
+    "eslint": "^9.0.0",
     "file-type": "^19.0.0",
-    "mocha": "^10.4.0",
-    "eslint": "^8.57.0"
+    "globals": "^15.0.0",
+    "mocha": "^10.4.0"
   }
 }
